@startuml

title __COWSANDBULLS's Class Diagram__\n

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.AISolver {
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.CowsAndBulls {
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.Main {
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.Piece {
    }
  }
  

  namespace com.project.cowsandbulls {
    class com.project.cowsandbulls.ServiceClass {
    }
  }
  

  com.project.cowsandbulls.CowsAndBulls .up.|> java.awt.event.ActionListener
  com.project.cowsandbulls.CowsAndBulls .up.|> java.awt.event.MouseListener
  com.project.cowsandbulls.CowsAndBulls -up-|> javax.swing.JFrame
  com.project.cowsandbulls.CowsAndBulls o-- com.project.cowsandbulls.AISolver : aiSolver
  com.project.cowsandbulls.Piece -up-|> javax.swing.JLabel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
